--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mysql2": "^3.9.2",
+    "nest-winston": "^1.9.4",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
