Feat: entity 매핑

--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,7 @@ pids
 *.seed
 *.pid.lock
 
+cokkiriKey.pem
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
