--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.14.1",
     "mysql2": "^3.9.2",
     "nest-winston": "^1.9.4",
+    "nestjs-cls": "^4.2.1",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,8 +39,8 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.20",
-    "winston": "^3.12.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "uuid": "^9.0.1",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -49,6 +50,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
