--- a/.github/workflows/git-action.yml
+++ b/.github/workflows/git-action.yml
@@ -23,4 +23,4 @@ jobs:
     - name: taging
       run: docker tag be_co-kkiri:latest co-kkiri/be_co-kkiri:latest
     - name: Push to Dockerhub
-      run: docker push co-kkiri/be_co-kkiri:latest
+      run: docker push kontae/be_co-kkiri:latest
