--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "nest-winston": "^1.9.4",
     "nestjs-cls": "^4.2.1",
     "next": "^14.1.3",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
