--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.6.13",
